<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sean.registrationactivity_lesson15.LoginActivity">



    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mailView"
            android:layout_marginBottom="5dp"
            android:textColor="#000000"
            android:text="Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textEmailAddress"
            android:layout_marginBottom="5dp"
            android:background="@drawable/borders"
            android:typeface="monospace"
            android:textColorHint="@color/colorAstechLightBlue"
            android:id="@+id/enterUsername"
            android:hint="@string/enter_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/passView"
            android:layout_marginBottom="5dp"
            android:textColor="#000000"
            android:text="@string/password_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginBottom="5dp"
            android:inputType="textPassword"
            android:background="@drawable/borders"
            android:typeface="monospace"
            android:textColorHint="@color/colorAstechLightBlue"
            android:id="@+id/enterPassword"
            android:hint="@string/enter_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <Button
                android:textColor="#ffffff"
                android:background="@drawable/button_curve"
                android:textAllCaps="false"
                android:id="@+id/signupButton"
                android:text="@string/join_button_text"
                android:layout_width="140dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content" />
            <Button
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:background="@drawable/button_curve"
                android:id="@+id/loginButton"
                android:text="@string/login_button_text"
                android:layout_marginLeft="5dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/forgotPass"
            android:textColor="@color/colorAstechLightBlue"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:onClick="language"
            android:id="@+id/russianLangBtn"
            android:layout_marginRight="5dp"
            android:background="@drawable/russian_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:onClick="language"
            android:id="@+id/ukranianLangBtn"
            android:layout_marginRight="5dp"
            android:background="@drawable/ukranian_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:onClick="language"
            android:id="@+id/englishLangBtn"
            android:layout_marginRight="5dp"
            android:background="@drawable/usanian_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>
