<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sean.registrationactivity_lesson15.ForgotPasswordActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/mainLinearLayout"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_marginBottom="5dp"
            android:textColor="#000000"
            android:text="Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/enterEmail"
            android:background="@drawable/borders"
            android:textColorHint="@color/colorAstechLightBlue"
            android:typeface="monospace"
            android:hint="@string/enter_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignLeft="@+id/mainLinearLayout"
        android:layout_below="@+id/mainLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:background="@drawable/button_curve"
            android:id="@+id/backToLoginBtn"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:text="@string/back_to_login"
            android:layout_width="140dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content" />
        <Button
            android:background="@drawable/button_curve"
            android:id="@+id/restorePassBtn"
            android:textColor="#ffffff"
            android:backgroundTint="@color/colorAstechBtnLoginGreen"
            android:textAllCaps="false"
            android:text="@string/restore"
            android:layout_marginLeft="5dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:onClick="language"
            android:id="@+id/russianLangBtn"
            android:layout_marginRight="5dp"
            android:background="@drawable/russian_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:onClick="language"
            android:id="@+id/ukranianLangBtn"
            android:layout_marginRight="5dp"
            android:background="@drawable/ukranian_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:onClick="language"
            android:id="@+id/englishLangBtn"
            android:layout_marginRight="5dp"
            android:background="@drawable/usanian_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>
